
parameters:
- new parameter misc/debugsol to specify a debug solution that should be checked during the solve
- fixed typo: heuristics/completesol/maxunkownrate has changed to heuristics/completesol/maxunknownrate
- new parameters: beforepresol, maxlpiter, and maxcontvars in heur_completesol.c
- new parameter: lp/refactorinterval to change the refactorization interval of the LP solver

interface:
- removed clique component index from SCIP_Var struct and the public interface method SCIPvarGetCliqueComponentIdx
- new interface methods SCIPcreateRandom, SCIPfreeRandom that replace SCIPrandomCreate and SCIPrandomFree
  in the public SCIP API.
- new interface method SCIPsetRandomSeed to (re)set a random number generator seed
- added method SCIPsetProbingLPState() to install given LP state and/or norms at the current probing node
- added functions SCIPbranchcandGetLPMaxPrio() and SCIPbranchcandGetExternMaxPrio() get the maximal branching priority of given
  branching candidates; also added SCIPbranchcandGetNPrioLPCands() to access the number of LP candidates with this priority.
- added methods SCIPupdateSolIntegralityViolation(), SCIPupdateSolBoundViolation(), SCIPupdateSolLPRowViolation(),
  SCIPupdateSolConsViolation() and SCIPupdateSolLPConsViolation() for updating numerical solution violations, as well as
  SCIPactivateSolViolationUpdates() and SCIPdeactivateSolViolationUpdates() for activating/deactivating violation updates globally
- added method SCIPcliqueGetIndex() which returns the unique identifier for the given clique
- added method SCIPgetNCliquesCreated() which returns the number of cliques created so far
- unify handling of objective limit by only using one parameter and not distinguishing w.r.t. lower and upper limits
- replaced LPI parameters SCIP_LPPAR_LOBJLIM and SCIP_LPPAR_UOBJLIM by SCIP_LPPAR_OBJLIM

performance improvements:
- use disjoint set to reduce peak memory usage and time to compute of clique table connectedness information